--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,17 @@
         android:layout_margin="16dp"
         android:src="@drawable/account_plus" />
 
+    <android.support.design.widget.FloatingActionButton
+
+        android:id="@+id/fab2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/fab"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/account_remove"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/empty"
         android:layout_width="wrap_content"
